--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     ],
     "homepage": "https://github.com/coyl/NameCaseLib",
     "license": "MIT",
+    "minimum-stability": "dev",
     "require": {
         "php": ">=5.3.2"
     },
